--- a/roles/dnf/tasks/main.yml
+++ b/roles/dnf/tasks/main.yml
@@ -10,7 +10,12 @@
   community.general.copr:
     name: agriffis/neovim-nightly
 
-- name: Install neovim
+- name: Install dnf plugins core
   dnf:
-    name: neovim
+    name: dnf-plugins-core
 
+- name: Add brave repo to config manager
+  command: sudo dnf config-manager --add-repo https://brave-browser-rpm-release.s3.brave.com/x86_64/
+
+- name: Import brave repo key
+  command: sudo rpm --import https://brave-browser-rpm-release.s3.brave.com/brave-core.asc
