--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -18,3 +18,15 @@
     src: "{{ dotfiles_home }}/roles/nvim/init.lua"
     dest: "{{ lookup('env', 'HOME') }}/.config/nvim/init.lua"
     state: link
+
+- name: Symlink markdown ftplugin
+  file:
+    src: "{{ dotfiles_home }}/roles/nvim/ftplugin/markdown.vim"
+    dest: "{{ lookup('env', 'HOME') }}/.config/nvim/ftplugin/markdown.vim"
+    state: link
+
+- name: Symlink help ftplugin
+  file:
+    src: "{{ dotfiles_home }}/roles/nvim/ftplugin/help.vim"
+    dest: "{{ lookup('env', 'HOME') }}/.config/nvim/ftplugin/help.vim"
+    state: link
