--- a/roles/github_releases/tasks/main.yml
+++ b/roles/github_releases/tasks/main.yml
@@ -2,6 +2,11 @@
   pip:
     name: github3.py
 
+- name: Create local bin directory if it doesn't exist
+  file:
+    path: "{{ lookup('env', 'HOME') }}/.local/bin"
+    state: directory
+
 - name: Get stylua's latest release tag
   community.general.github_release:
     user: JohnnyMorganz
@@ -9,18 +14,48 @@
     action: latest_release
   register: stylua_latest
 
-- name: Create local bin directory if it doesn't exist
-  file:
-    path: "{{ lookup('env', 'HOME') }}/.local/bin"
-    state: directory
-
 - name: Get stylua binary
   unarchive:
-        src: "https://github.com/JohnnyMorganz/StyLua/releases/download/{{ stylua_latest['tag'] }}/stylua-{{ stylua_latest['tag'] | regex_replace('^v','') }}-linux.zip"
-        dest: "{{ lookup('env', 'HOME') }}/.local/bin"
-        remote_src: true
+    src: "https://github.com/JohnnyMorganz/StyLua/releases/download/{{ stylua_latest['tag'] }}/stylua-{{ stylua_latest['tag'] | regex_replace('^v','') }}-linux.zip"
+    dest: "{{ lookup('env', 'HOME') }}/.local/bin"
+    remote_src: true
 
 - name: Make stylua executable
   file:
     path: "{{ lookup('env', 'HOME') }}/.local/bin/stylua"
     mode: 0777
+
+# - name: Get sumneko lua's latest release tag
+#   community.general.github_release:
+#     user: sumneko
+#     repo: lua-language-server
+#     action: latest_release
+#   register: lualanguageserver_latest
+#
+# - name: Create directory for sumneko server if it doesn't exist
+#   file:
+#     path: "{{ lookup('env', 'HOME') }}/.local/bin/sumneko_lua"
+#     state: directory
+#
+# - name: Get lua-language-server files
+#   unarchive:
+#     src: "https://github.com/sumneko/lua-language-server/releases/download/{{ lualanguageserver_latest['tag'] | regex_replace('^v','') }}/lua-language-server-{{ lualanguageserver_latest['tag'] | regex_replace('^v','') }}-linux-x64.tar.gz"
+#     dest: "{{ lookup('env', 'HOME') }}/.local/bin/sumneko_lua"
+#     remote_src: true
+#
+# - name: Create script to run sumneko lua server
+#   copy:
+#     dest: "{{ lookup('env', 'HOME') }}/.local/bin/lua-language-server"
+#     content: |
+#       #!/bin/bash
+#       exec "{{ lookup('env', 'HOME') }}/.local/bin/sumneko_lua/bin/lua-language-server" "$@"
+#
+# - name: Make sumneko executable
+#   file:
+#     path: "{{ lookup('env', 'HOME') }}/.local/bin/sumneko_lua"
+#     mode: 0777
+#
+# - name: Make sumneko script executable
+#   file:
+#     path: "{{ lookup('env', 'HOME') }}/.local/bin/lua-language-server"
+#     mode: 0777
