--- a/roles/github_releases/tasks/main.yml
+++ b/roles/github_releases/tasks/main.yml
@@ -6,6 +6,7 @@
   file:
     path: "{{ lookup('env', 'HOME') }}/.local/bin"
     state: directory
+    owner: "{{ lookup('env', 'USER') }}"
 
 - name: Get stylua's latest release tag
   community.general.github_release:
@@ -20,42 +21,42 @@
     dest: "{{ lookup('env', 'HOME') }}/.local/bin"
     remote_src: true
 
-- name: Make stylua executable
+- name: Make stylua executable and change ownership to user
   file:
     path: "{{ lookup('env', 'HOME') }}/.local/bin/stylua"
-    mode: 0777
+    owner: jackson
+    mode: 0755
 
-# - name: Get sumneko lua's latest release tag
-#   community.general.github_release:
-#     user: sumneko
-#     repo: lua-language-server
-#     action: latest_release
-#   register: lualanguageserver_latest
-#
-# - name: Create directory for sumneko server if it doesn't exist
-#   file:
-#     path: "{{ lookup('env', 'HOME') }}/.local/bin/sumneko_lua"
-#     state: directory
-#
-# - name: Get lua-language-server files
-#   unarchive:
-#     src: "https://github.com/sumneko/lua-language-server/releases/download/{{ lualanguageserver_latest['tag'] | regex_replace('^v','') }}/lua-language-server-{{ lualanguageserver_latest['tag'] | regex_replace('^v','') }}-linux-x64.tar.gz"
-#     dest: "{{ lookup('env', 'HOME') }}/.local/bin/sumneko_lua"
-#     remote_src: true
-#
-# - name: Create script to run sumneko lua server
-#   copy:
-#     dest: "{{ lookup('env', 'HOME') }}/.local/bin/lua-language-server"
-#     content: |
-#       #!/bin/bash
-#       exec "{{ lookup('env', 'HOME') }}/.local/bin/sumneko_lua/bin/lua-language-server" "$@"
-#
-# - name: Make sumneko executable
-#   file:
-#     path: "{{ lookup('env', 'HOME') }}/.local/bin/sumneko_lua"
-#     mode: 0777
-#
-# - name: Make sumneko script executable
-#   file:
-#     path: "{{ lookup('env', 'HOME') }}/.local/bin/lua-language-server"
-#     mode: 0777
+- name: Get sumneko lua's latest release tag
+  community.general.github_release:
+    user: sumneko
+    repo: lua-language-server
+    action: latest_release
+  register: lualanguageserver_latest
+
+- name: Create directory for sumneko server if it doesn't exist
+  file:
+    path: "{{ lookup('env', 'HOME') }}/.local/bin/sumneko_lua"
+    state: directory
+
+- name: Get lua-language-server files
+  unarchive:
+    src: "https://github.com/sumneko/lua-language-server/releases/download/{{ lualanguageserver_latest['tag'] | regex_replace('^v','') }}/lua-language-server-{{ lualanguageserver_latest['tag'] | regex_replace('^v','') }}-linux-x64.tar.gz"
+    dest: "{{ lookup('env', 'HOME') }}/.local/bin/sumneko_lua"
+    remote_src: true
+
+- name: Create script to run sumneko lua server
+  copy:
+    dest: "{{ lookup('env', 'HOME') }}/.local/bin/lua-language-server"
+    content: |
+      #!/bin/bash
+      exec "{{ lookup('env', 'HOME') }}/.local/bin/sumneko_lua/bin/lua-language-server" "$@"
+
+- name: Make sumneko executable and change ownership to user
+  file:
+    path: "{{ lookup('env', 'HOME') }}/.local/bin/lua-language-server"
+    owner: jackson
+    mode: 0755
+
+- name: Give user ownership of sumneko files
+  command: chown -R "{{ lookup('env', 'USER') }}" "{{ lookup('env', 'HOME') }}/.local/bin/sumneko_lua"
