avoid perm issues by explicitly using root

--- a/roles/dnf/tasks/main.yml
+++ b/roles/dnf/tasks/main.yml
@@ -1,4 +1,7 @@
 - name: Enable third party repos
+  become: yes
+  become_user: root
+  become_method: sudo
   dnf:
     name: 
       - fedora-workstation-repositories
@@ -8,15 +11,24 @@
   command: flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
 
 - name: Enable neovim-nightly COPR repo
+  become: yes
+  become_user: root
+  become_method: sudo
   community.general.copr:
     name: agriffis/neovim-nightly
 
 - name: Install dnf plugins core
+  become: yes
+  become_user: root
+  become_method: sudo
   dnf:
     name: dnf-plugins-core
     state: present
 
 - name: Add brave repo to config manager
+  become: yes
+  become_user: root
+  become_method: sudo
   command: 
     cmd: dnf config-manager --add-repo https://brave-browser-rpm-release.s3.brave.com/x86_64/
     warn: false
@@ -24,11 +36,17 @@
     creates: /etc/yum.repos.d/brave-browser-rpm-release.s3.brave.com_x86_64_.repo
 
 - name: Import brave repo key
+  become: yes
+  become_user: root
+  become_method: sudo
   rpm_key:
     state: present
     key: https://brave-browser-rpm-release.s3.brave.com/brave-core.asc
 
 - name: Install dnf packages
+  become: yes
+  become_user: root
+  become_method: sudo
   dnf:
     name: "{{ item }}"
     state: present
