don't need bash role yet, set $EDITOR

--- a/roles/dnf/tasks/main.yml
+++ b/roles/dnf/tasks/main.yml
@@ -52,6 +52,12 @@
     name: atim/lazygit
     state: enabled
 
+- name: Add lazygit alias to bashrc
+  lineinfile:
+    path: "{{ lookup('env', 'HOME') }}/.bashrc"
+    line: "alias lg=lazygit"
+    state: present
+
 - name: Install dnf packages
   become: yes
   become_user: root
