--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -1,35 +1,55 @@
-- name: Create nvim config dir if needed
-  file:
-    path: "{{ lookup('env', 'HOME') }}/.config/nvim"
-    state: directory
+- name: Install nvim package
+  block:
+  - name: Enable neovim-nightly COPR repo
+    become: yes
+    become_user: root
+    become_method: sudo
+    community.general.copr:
+      name: agriffis/neovim-nightly
+      state: enabled
 
-- name: Create nvim lua dir if needed
-  file:
-    path: "{{ lookup('env', 'HOME') }}/.config/nvim/lua"
-    state: directory
+  - name: Install neovim package
+    become: yes
+    become_user: root
+    become_method: sudo
+    dnf:
+      name: neovim
+      state: present
 
-- name: Create nvim ftplugin dir if needed
-  file:
-    path: "{{ lookup('env', 'HOME') }}/.config/nvim/ftplugin"
-    state: directory
+- name: Set up nvim configuration
+  block:
+  - name: Create nvim config dir if needed
+    file:
+      path: "{{ lookup('env', 'HOME') }}/.config/nvim"
+      state: directory
 
-- name: Symlink init.lua
-  file:
-    src: "{{ dotfiles_home }}/roles/nvim/init.lua"
-    dest: "{{ lookup('env', 'HOME') }}/.config/nvim/init.lua"
-    state: link
+  - name: Create nvim lua dir if needed
+    file:
+      path: "{{ lookup('env', 'HOME') }}/.config/nvim/lua"
+      state: directory
 
-- name: Symlink markdown ftplugin
-  file:
-    src: "{{ dotfiles_home }}/roles/nvim/ftplugin/markdown.vim"
-    dest: "{{ lookup('env', 'HOME') }}/.config/nvim/ftplugin/markdown.vim"
-    state: link
+  - name: Create nvim ftplugin dir if needed
+    file:
+      path: "{{ lookup('env', 'HOME') }}/.config/nvim/ftplugin"
+      state: directory
 
-- name: Symlink help ftplugin
-  file:
-    src: "{{ dotfiles_home }}/roles/nvim/ftplugin/help.vim"
-    dest: "{{ lookup('env', 'HOME') }}/.config/nvim/ftplugin/help.vim"
-    state: link
+  - name: Symlink init.lua
+    file:
+      src: "{{ dotfiles_home }}/roles/nvim/init.lua"
+      dest: "{{ lookup('env', 'HOME') }}/.config/nvim/init.lua"
+      state: link
+
+  - name: Symlink markdown ftplugin
+    file:
+      src: "{{ dotfiles_home }}/roles/nvim/ftplugin/markdown.vim"
+      dest: "{{ lookup('env', 'HOME') }}/.config/nvim/ftplugin/markdown.vim"
+      state: link
+
+  - name: Symlink help ftplugin
+    file:
+      src: "{{ dotfiles_home }}/roles/nvim/ftplugin/help.vim"
+      dest: "{{ lookup('env', 'HOME') }}/.config/nvim/ftplugin/help.vim"
+      state: link
 
 - name: Set editor to nvim
   lineinfile:
