make stylua executable

--- a/roles/github_releases/tasks/main.yml
+++ b/roles/github_releases/tasks/main.yml
@@ -23,6 +23,11 @@
       dest: "{{ lookup('env', 'HOME') }}/.local/bin"
       remote_src: true
 
+  - name: Make stylua executable
+    file:
+      path: "{{ lookup('env', 'HOME') }}/.local/bin/stylua"
+      mode: 0755
+
 - name: Install sumneko
   block:
   - name: Get sumneko lua's latest release tag
