--- a/roles/npm/tasks/main.yml
+++ b/roles/npm/tasks/main.yml
@@ -3,4 +3,7 @@
     name: "{{ item }}"
     state: present
     global: yes
+  become: yes
+  become_user: root
+  become_method: sudo
   loop: "{{ packages }}"
