add clang, add sudo to flatpak install

--- a/roles/flatpaks/tasks/main.yml
+++ b/roles/flatpaks/tasks/main.yml
@@ -3,6 +3,9 @@
   register: flatpak_remotes
 
 - name: Enable flathub repos
+  become: yes
+  become_user: root
+  become_method: sudo
   command: flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
   when: "'flathub' not in flatpak_remotes.stdout"
 
