--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -12,7 +12,7 @@
     become: yes
     become_user: root
     become_method: sudo
-    dnf:
+    community.general.rpm_ostree_pkg:
       name: neovim
       state: present
 
