--- a/roles/dnf/tasks/main.yml
+++ b/roles/dnf/tasks/main.yml
@@ -76,13 +76,13 @@
         name: gnome-shell-extension-appindicator
         state: present
 
-    - name: Check if appindicator enabled
-      command: gsettings get org.gnome.shell enabled-extensions
-      register: appindicators_info
-
-    - name: Enable the appindicator extension
-      command: gnome-extensions enable appindicatorsupport@rgcjonas.gmail.com
-      when: "'appindicatorsupport' not in appindicators_info.stdout"
+#    - name: Check if appindicator enabled
+#      command: gsettings get org.gnome.shell enabled-extensions
+#      register: appindicators_info
+#
+#    - name: Enable the appindicator extension
+#      command: gnome-extensions enable appindicatorsupport@rgcjonas.gmail.com
+#      when: "'appindicatorsupport' not in appindicators_info.stdout"
 
 - name: Install default dnf packages
   become: yes
