--- a/roles/kitty/kitty.conf
+++ b/roles/kitty/kitty.conf
@@ -3,10 +3,10 @@ linux_display_server x11
 window_padding_width 10
 
 # font_family JetBrainsMono Nerd Font
-# font_family Iosevka
-# bold_font Iosevka Bold
-# bold_italic_font Iosevka Bold Italic
-# italic_font Iosevka Italic
+font_family Iosevka Term SS04
+bold_font Iosevka Term SS04
+bold_italic_font Iosevka Term SS04
+italic_font Iosevka Term SS04
 
 font_size 14
 
