--- a/roles/kitty/kitty.conf
+++ b/roles/kitty/kitty.conf
@@ -3,10 +3,10 @@ linux_display_server x11
 window_padding_width 10
 
 # font_family JetBrainsMono Nerd Font
-font_family Iosevka Term SS04
-bold_font Iosevka Term SS04
-bold_italic_font Iosevka Term SS04
-italic_font Iosevka Term SS04
+font_family Iosevka Fixed
+bold_font Iosevka Fixed
+bold_italic_font Iosevka Fixed
+italic_font Iosevka Fixed
 
 font_size 14
 
