--- a/roles/dnf/tasks/main.yml
+++ b/roles/dnf/tasks/main.yml
@@ -102,6 +102,15 @@
         name: iosevka-fixed-fonts
         state: present
 
+- name: Install C Criterion library package
+  become: yes
+  become_user: root
+  become_method: sudo
+  dnf:
+    name: 'https://github.com/samber/criterion-rpm-package/releases/download/2.3.3/libcriterion-devel-2.3.3-2.el7.x86_64.rpm'
+    state: present
+    disable_gpg_check: True
+
 - name: Install default dnf packages
   become: yes
   become_user: root
