--- a/roles/dnf/defaults/main.yml
+++ b/roles/dnf/defaults/main.yml
@@ -9,9 +9,10 @@ packages:
   - clang
   - clang-tools-extra
   - toolbox
-  - glib2-devel
   - bear
   - black
   - python-isort
   - erlang
   - elixir
+  - go
+  - golang-x-tools-gopls
