--- a/roles/kitty/kitty.conf
+++ b/roles/kitty/kitty.conf
@@ -1,14 +1,17 @@
 linux_display_server x11
 
+cursor_shape block
+shell_integration no-cursor
+
 window_padding_width 10
 
-# font_family JetBrainsMono Nerd Font
-font_family Iosevka Fixed
-bold_font Iosevka Fixed
-bold_italic_font Iosevka Fixed
-italic_font Iosevka Fixed
-
-font_size 14
+font_family JetBrains Mono
+# font_family Iosevka Fixed
+# bold_font Iosevka Fixed
+# bold_italic_font Iosevka Fixed
+# italic_font Iosevka Fixed
+#
+# font_size 14
 
 disable_ligatures always
 map ctrl+shift+t new_tab_with_cwd
@@ -31,42 +34,24 @@ map ctrl+right neighboring_window right
 map ctrl+up neighboring_window up
 map ctrl+down neighboring_window down
 
-# main colors
-background #1E1E29
-foreground #D7DAE0
-selection_background #2D293B
-selection_foreground #F0AFE1
-url_color #A4B9EF
-cursor #B3E1A3
-
-# tabs
-active_tab_background #1E1E28
-active_tab_foreground #D7DAE0
-inactive_tab_background #1B1923
-inactive_tab_foreground #A4B9EF
-tab_bar_background #15121C
-
-# --> normal
-
-# normal
-color0 #6E6C7C
-color1 #E28C8C
-color2 #B3E1A3
-color3 #EADDA0
-color4 #A4B9EF
-color5 #C6AAE8
-color6 #F0AFE1
-color7 #D7DAE0
-
-# bright
-color8 #6E6C7C
-color9 #E28C8C
-color10 #B3E1A3
-color11 #EADDA0
-color12 #A4B9EF
-color13 #C6AAE8
-color14 #F0AFE1
-color15 #D7DAE0
-
-color16 #ECBFBD
-color17 #3E4058
+background            #222221
+foreground            #e4e4e4
+cursor                #16aec9
+selection_background  #dedede
+color0                #212121
+color8                #424242
+color1                #b7141e
+color9                #e83a3f
+color2                #457b23
+color10               #7aba39
+color3                #f5971d
+color11               #fee92e
+color4                #134eb2
+color12               #53a4f3
+color5                #550087
+color13               #a94dbb
+color6                #0e707c
+color14               #26bad1
+color7                #eeeeee
+color15               #d8d8d8
+selection_foreground #222221
