comment out erlang/elixir stuff for now

--- a/roles/dnf/defaults/main.yml
+++ b/roles/dnf/defaults/main.yml
@@ -12,8 +12,8 @@ packages:
   - bear
   - black
   - python-isort
-  - erlang
-  - elixir
+  # - erlang
+  # - elixir
   - go
   - golang-x-tools-gopls
   - watchman
