remove go stuff for now

--- a/roles/dnf/defaults/main.yml
+++ b/roles/dnf/defaults/main.yml
@@ -14,8 +14,8 @@ packages:
   - python-isort
   # - erlang
   # - elixir
-  - go
-  - golang-x-tools-gopls
+  # - go
+  # - golang-x-tools-gopls
   - watchman
   - python3-pywatchman
   - conda
