--- a/roles/kitty/kitty.conf
+++ b/roles/kitty/kitty.conf
@@ -6,6 +6,7 @@ shell_integration no-cursor
 window_padding_width 10
 
 font_family JetBrains Mono
+font_size 13
 # font_family Iosevka Fixed
 # bold_font Iosevka Fixed
 # bold_italic_font Iosevka Fixed
