try some kitty things

--- a/roles/kitty/kitty.conf
+++ b/roles/kitty/kitty.conf
@@ -35,6 +35,9 @@ map ctrl+right neighboring_window right
 map ctrl+up neighboring_window up
 map ctrl+down neighboring_window down
 
+map F9 nth_os_window 1
+map F10 nth_os_window 2
+
 background            #212121
 foreground            #e4e4e4
 cursor                #16aec9
