try other theme again

--- a/roles/kitty/kitty.conf
+++ b/roles/kitty/kitty.conf
@@ -36,47 +36,47 @@ map ctrl+up neighboring_window up
 map ctrl+down neighboring_window down
 
 # material dark
-background            #212121
-foreground            #e4e4e4
-cursor                #16aec9
-selection_background  #dedede
-color0                #212121
-color8                #424242
-color1                #b7141e
-color9                #e83a3f
-color2                #457b23
-color10               #7aba39
-color3                #f5971d
-color11               #fee92e
-color4                #134eb2
-color12               #53a4f3
-color5                #550087
-color13               #a94dbb
-color6                #0e707c
-color14               #26bad1
-color7                #eeeeee
-color15               #d8d8d8
-selection_foreground #222221
+# background            #212121
+# foreground            #e4e4e4
+# cursor                #16aec9
+# selection_background  #dedede
+# color0                #212121
+# color8                #424242
+# color1                #b7141e
+# color9                #e83a3f
+# color2                #457b23
+# color10               #7aba39
+# color3                #f5971d
+# color11               #fee92e
+# color4                #134eb2
+# color12               #53a4f3
+# color5                #550087
+# color13               #a94dbb
+# color6                #0e707c
+# color14               #26bad1
+# color7                #eeeeee
+# color15               #d8d8d8
+# selection_foreground #222221
 
 # alabaster dark
-# background            #0e1415
-# foreground            #cecece
-# cursor                #cd974b
-# selection_background  #293334
-# selection_foreground  #cecece
-# color0                #000000
-# color1                #d2322d
-# color2                #6abf40
-# color3                #cd974b
-# color4                #217EBC
-# color5                #9B3596
-# color6                #178F79
-# color7                #cecece
-# color8                #333333
-# color9                #c33c33
-# color10               #95cb82
-# color11               #dfdf8e
-# color12               #71aed7
-# color13               #cc8bc9
-# color14               #47BEA9
-# color15               #ffffff
+background            #0e1415
+foreground            #cecece
+cursor                #cd974b
+selection_background  #293334
+selection_foreground  #cecece
+color0                #000000
+color1                #d2322d
+color2                #6abf40
+color3                #cd974b
+color4                #217EBC
+color5                #9B3596
+color6                #178F79
+color7                #cecece
+color8                #333333
+color9                #c33c33
+color10               #95cb82
+color11               #dfdf8e
+color12               #71aed7
+color13               #cc8bc9
+color14               #47BEA9
+color15               #ffffff
