--- a/roles/kitty/kitty.conf
+++ b/roles/kitty/kitty.conf
@@ -35,7 +35,7 @@ map ctrl+right neighboring_window right
 map ctrl+up neighboring_window up
 map ctrl+down neighboring_window down
 
-# material dark
+### material dark
 # background            #212121
 # foreground            #e4e4e4
 # cursor                #16aec9
@@ -58,25 +58,98 @@ map ctrl+down neighboring_window down
 # color15               #d8d8d8
 # selection_foreground #222221
 
-# alabaster dark
-background            #0e1415
-foreground            #cecece
-cursor                #cd974b
-selection_background  #293334
-selection_foreground  #cecece
-color0                #000000
-color1                #d2322d
-color2                #6abf40
-color3                #cd974b
-color4                #217EBC
-color5                #9B3596
-color6                #178F79
-color7                #cecece
-color8                #333333
-color9                #c33c33
-color10               #95cb82
-color11               #dfdf8e
-color12               #71aed7
-color13               #cc8bc9
-color14               #47BEA9
-color15               #ffffff
+### alabaster dark
+# background            #0e1415
+# foreground            #cecece
+# cursor                #cd974b
+# selection_background  #293334
+# selection_foreground  #cecece
+# color0                #000000
+# color1                #d2322d
+# color2                #6abf40
+# color3                #cd974b
+# color4                #217EBC
+# color5                #9B3596
+# color6                #178F79
+# color7                #cecece
+# color8                #333333
+# color9                #c33c33
+# color10               #95cb82
+# color11               #dfdf8e
+# color12               #71aed7
+# color13               #cc8bc9
+# color14               #47BEA9
+# color15               #ffffff
+
+### catpuccin
+
+# The basic colors
+foreground              #CDD6F4
+background              #1E1E2E
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
+
+# Cursor colors
+cursor                  #F5E0DC
+cursor_text_color       #1E1E2E
+
+# URL underline color when hovering with mouse
+url_color               #F5E0DC
+
+# Kitty window border colors
+active_border_color     #B4BEFE
+inactive_border_color   #6C7086
+bell_border_color       #F9E2AF
+
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
+
+# Tab bar colors
+active_tab_foreground   #11111B
+active_tab_background   #CBA6F7
+inactive_tab_foreground #CDD6F4
+inactive_tab_background #181825
+tab_bar_background      #11111B
+
+# Colors for marks (marked text in the terminal)
+mark1_foreground #1E1E2E
+mark1_background #B4BEFE
+mark2_foreground #1E1E2E
+mark2_background #CBA6F7
+mark3_foreground #1E1E2E
+mark3_background #74C7EC
+
+# The 16 terminal colors
+
+# black
+color0 #45475A
+color8 #585B70
+
+# red
+color1 #F38BA8
+color9 #F38BA8
+
+# green
+color2  #A6E3A1
+color10 #A6E3A1
+
+# yellow
+color3  #F9E2AF
+color11 #F9E2AF
+
+# blue
+color4  #89B4FA
+color12 #89B4FA
+
+# magenta
+color5  #F5C2E7
+color13 #F5C2E7
+
+# cyan
+color6  #94E2D5
+color14 #94E2D5
+
+# white
+color7  #BAC2DE
+color15 #A6ADC8
