--- a/roles/kitty/kitty.conf
+++ b/roles/kitty/kitty.conf
@@ -5,7 +5,7 @@ shell_integration no-cursor
 
 window_padding_width 10
 
-font_family JetBrains Mono
+font_family JetBrainsMono Nerd Font
 font_size 13
 # font_family Iosevka Fixed
 # bold_font Iosevka Fixed
@@ -14,7 +14,7 @@ font_size 13
 #
 # font_size 14
 
-disable_ligatures always
+# disable_ligatures always
 map ctrl+shift+t new_tab_with_cwd
 touch_scroll_multiplier 2.0
 enable_audio_bell no
