update kitty setting and yank hl

--- a/roles/kitty/kitty.conf
+++ b/roles/kitty/kitty.conf
@@ -3,7 +3,7 @@ linux_display_server x11
 cursor_shape block
 shell_integration no-cursor
 
-window_padding_width 10
+# window_padding_width 10
 
 font_family JetBrainsMono Nerd Font
 font_size 13
