adjust kitty line height

--- a/roles/kitty/kitty.conf
+++ b/roles/kitty/kitty.conf
@@ -14,6 +14,9 @@ font_size 13
 #
 # font_size 14
 
+# adjust line height
+adjust_line_height 150%
+
 # disable_ligatures always
 map ctrl+shift+t new_tab_with_cwd
 touch_scroll_multiplier 2.0
