--- a/roles/helix/config.toml
+++ b/roles/helix/config.toml
@@ -1,5 +1,5 @@
 [editor.lsp]
-display-messages = true
+auto-signature-help = false
 
 [editor]
 scrolloff = 1
@@ -7,3 +7,13 @@ line-number = "relative"
 
 [editor.file-picker]
 hidden = false
+
+[editor.indent-guides]
+render = true
+
+[keys.insert]
+"A-x" = "signature_help"
+
+[keys.normal]
+"{" = "goto_prev_paragraph"
+"}" = "goto_next_paragraph"
